--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-  /*background-color: #cecece;*/
+  background-color: #cecece;
 }
 
 .header-picture {
 
-  background: url('/images/background.jpg') center/cover;
+  /*background: url('/images/background.jpg') center/cover;*/
 }
