--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,10 +1,10 @@
 <!-- Material design lite by Google. See it here: https://www.getmdl.io -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.1.0/material.indigo-pink.min.css">
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.0/material.deep_orange-red.min.css" />
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />
 
 <!-- Font Awesome! https://fortawesome.github.io -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
 <!-- Custom css -->
-<link href="/css/main.css" type="text/css" rel="stylesheet">
+<link href="/css/main.css" type="text/css" rel="stylesheet" />
