--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{% if page.language ‰}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
   <head>
     <title>{{ page.title }}</title>
     {% include meta.html %}
