--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="mdl-layout__header mdl-layout__header">
+<header class="mdl-layout__header mdl-layout__header--transparent">
   <div class="mdl-layout__header-row">
     <!-- Title -->
     <span class="mdl-layout-title">{{page.title}}</span>
