--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
     <!-- MAIN CONTENT -->
     <main class="mdl-layout__content">
+      <div class="separator"></div>
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--2-col"></div>
         <div class="mdl-cell mdl-cell--8-col">
