--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
       <a class="mdl-navigation__link {{page.cv}}"href="/cv">Personal CV</a>
       <a class="mdl-navigation__link {{page.about}}" href="/about">About</a>
     </nav>
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
+
+    <button onclick="window.location.href='https://github.com/mcomisso'" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
       <span><i class="fa fa-github-square"></i> Github</span>
     </button>
   </div>
