--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,7 @@
     <div class="mdl-layout-spacer"></div>
     <!-- Navigation -->
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link {{page.home}}" href="/">Home</a>
-      <a class="mdl-navigation__link {{page.projects}}" href="/projects">Hobby Projects</a>
-      <a class="mdl-navigation__link {{page.cv}}"href="/cv">Personal CV</a>
-      <a class="mdl-navigation__link {{page.about}}" href="/about">About</a>
+      {% include menu.html %}
     </nav>
 
     <button onclick="window.location.href='https://github.com/mcomisso'" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
@@ -19,10 +16,7 @@
 </header>
 <div class="mdl-layout__drawer">
 <nav class="mdl-navigation">
-  <a class="mdl-navigation__link" href="/"><i class="material-icons">home</i> Home</a>
-  <a class="mdl-navigation__link" href="/projects">Hobby Projects</a>
-  <a class="mdl-navigation__link" href="/cv"><i class="material-icons">work</i> Personal CV</a>
-  <a class="mdl-navigation__link" href="/about">About</a>
+  {% include menu.html %}
   <a class="mdl-navigation__link" href="/blog"><i class="material-icons">book</i> Blog</a>
 
 </nav>
