--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,6 +2,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="{{ page.description }}">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
