--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,13 @@
     {% include meta.html %}
     {% include styles.html %}
   </head>
-  <body>
+  <body class="mdl-color--blue-grey">
     <div class="header-picture mdl-layout mdl-js-layout">
       {%include header.html %}
 
     <!-- MAIN CONTENT -->
     <main class="mdl-layout__content">
-      <div class="separator"></div>
+      <div class="separator mdl-color--blue-grey"></div>
       <div class="mdl-grid negative-top">
         <div class="mdl-cell mdl-cell--2-col"></div>
         <div class="mdl-cell mdl-cell--8-col">
