--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,5 @@
-<a class="mdl-navigation__link {{page.home}}" href="/">Home</a>
-<a class="mdl-navigation__link {{page.projects}}" href="/projects">Hobby Projects</a>
-<a class="mdl-navigation__link {{page.cv}}"href="/cv">Personal CV</a>
-<a class="mdl-navigation__link {{page.about}}" href="/about">About</a>
+<!-- <a class="mdl-navigation__link {{page.home}}" href="/">Home</a> -->
+<!-- <a class="mdl-navigation__link {{page.projects}}" href="/projects">Hobby Projects</a> -->
+<!-- <a class="mdl-navigation__link {{page.cv}}"href="/cv">Personal CV</a> -->
+<a class="mdl-navigation__link" href="/blog"><i class="material-icons">book</i> Blog</a>
+<a class="mdl-navigation__link" href="/about">About</a>
