--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,4 +2,4 @@
 <!-- <a class="mdl-navigation__link {{page.projects}}" href="/projects">Hobby Projects</a> -->
 <!-- <a class="mdl-navigation__link {{page.cv}}"href="/cv">Personal CV</a> -->
 <a class="mdl-navigation__link" href="/blog"><i class="material-icons">book</i> Blog</a>
-<a class="mdl-navigation__link" href="/about">About</a>
+<a class="mdl-navigation__link" href="/about"><i class="material-icons">fingerprint</i> About</a>
