--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,5 +7,5 @@
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Material Design Lite">
-<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
+<meta name="apple-mobile-web-app-title" content="Matteo Comisso">
+<!-- <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png"> -->
