--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -8,4 +8,5 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Matteo Comisso">
+<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 <!-- <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png"> -->
