--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,6 @@
+{% if post.comments %}
 <div id="disqus_thread"></div>
+<button type="button" name="button" class="mdl-button" onclick="disqus_config()">Comment</button>
 <script>
 /**
 * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -7,7 +9,7 @@
 
 var disqus_config = function () {
 
-  this.page.url = {{ page.url }} ; // Replace PAGE_URL with your page's canonical URL variable
+  this.page.url = {{site.url}}{{ page.url }} ; // Replace PAGE_URL with your page's canonical URL variable
   this.page.identifier = {{ page.id }} ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
 
@@ -21,3 +23,4 @@ var disqus_config = function () {
   })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% endif %}
