--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,13 +9,15 @@
     </li>
     <!-- Loop for latest posts -->
     {% for post in site.posts %}
-    <li class="mdl-list__item">
-      <span class="post-date">{{ post.date | date_to_string }}</span>
-      <a href="{{ post.url }}">
-        <span class="mdl-list__item-primary-content">
-          {{ post.title }}
+    <li class="mdl-list__item mdl-list__item--two-line">
+      <span class="mdl-list__item-primary-content">
+        <span class="">
+          <a href="{{ post.url }}">
+            {{ post.title }}
+          </a>
         </span>
-      </a>
+        <span class="mdl-list__item-sub-title">{{ post.date | date_to_string }}</span>
+      </span>
     </li>
     {% endfor %}
   </ul>
