--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{% if page.language ‰}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
+{% include redirect.html %}
   <head>
     <title>{{ page.title }}</title>
     {% include meta.html %}
