--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="{% if page.language ‰}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
-<head>
-  <title>{{ page.title }}</title>
-  {% include styles.html %}
-</head>
-<style media="screen">
-  body {
-    height: 100%;
-  }
-  .centered {
-    text-align: center;
-    margin: 0 auto;
-  }
-</style>
-<body class="mdl-color--primary">
-  <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--middle">
-      <div class="mdl-card mdl-shadow--2dp centered">
-        {{content}}
-        <!-- Navigation buttons -->
-        <div class="mdl-grid">
-          <div class="mdl-cell mdl-cell--4-col">
-            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/">Home</a>
-          </div>
-          <div class="mdl-cell mdl-cell--4-col">
-            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
-          </div>
-          <div class="mdl-cell mdl-cell--4-col">
-            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
+{% include redirect.html %}
+  <head>
+    <title>{{ page.title }}</title>
+    {% include styles.html %}
+  </head>
+  <style media="screen">
+    body {
+      height: 100%;
+    }
+    .centered {
+      text-align: center;
+      margin: 0 auto;
+    }
+  </style>
+  <body class="mdl-color--primary">
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--12-col mdl-cell--middle">
+        <div class="mdl-card mdl-shadow--2dp centered">
+          {{content}}
+          <!-- Navigation buttons -->
+          <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--4-col">
+              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/">Home</a>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col">
+              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col">
+              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
+            </div>
           </div>
         </div>
-      </div>
 
+      </div>
     </div>
-  </div>
-  {% include scripts.html %}
-</body>
+    {% include scripts.html %}
+  </body>
+</html>
