--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     </nav>
 
     <button onclick="window.location.href='https://github.com/mcomisso/mcomisso.github.io'" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
-      <span><i class="fa fa-github-square"></i> Fork me</span>
+      <span><i class="fa fa-github-square"></i> Fork</span>
     </button>
 
   </div>
