--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if post.comments %}
+
 <div id="disqus_thread"></div>
 <script>
 /**
@@ -6,11 +6,9 @@
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
 */
 
-var disqus_config = function () {
 
-  this.page.url = {{site.url}}{{ page.url }} ; // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = {{ page.url }} ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
+  this.page.url = "{{site.url}}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 
   (function() { // DON'T EDIT BELOW THIS LINE
   var d = document, s = d.createElement('script');
@@ -22,4 +20,3 @@ var disqus_config = function () {
   })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-{% endif %}
