--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,10 +6,11 @@
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
 */
 
-
-  this.page.url = "{{site.url}}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-
+  var disqus_config = function () {
+    this.page.url = "{{site.url}}{{ page.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = "{{ page.url }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  
   (function() { // DON'T EDIT BELOW THIS LINE
   var d = document, s = d.createElement('script');
 
