Fork button moved

--- a/_includes/forkme.html
+++ b/_includes/forkme.html
@@ -1,4 +1,4 @@
 <button id="fork-me-button" onclick="window.location.href='https://github.com/mcomisso/mcomisso.github.io'"
-  class="mdl-button--fab mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
-  <span><i class="fa fa-github-square"></i></span>
+  class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+  <i class="fa fa-github-square"></i>
 </button>
