Dynamic color classes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
     {% include meta.html %}
     {% include styles.html %}
   </head>
-  <body class="mdl-color--blue-grey">
+  <body class="mdl-color--primary">
     <div class="header-picture mdl-layout mdl-js-layout">
       {%include header.html %}
       <!-- MAIN CONTENT -->
       <main class="mdl-layout__content">
-        <div class="separator mdl-color--blue-grey"></div>
+        <div class="separator mdl-color--primary"></div>
         <div class="mdl-grid negative-top">
           <div class="mdl-cell mdl-cell--2-col"></div>
           {{ content }}
