--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,6 +1,6 @@
 <!-- Material design lite by Google. See it here: https://www.getmdl.io -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-<link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.blue_grey-red.min.css" />
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.red-blue.min.css" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />
 
 <!-- Font Awesome! https://fortawesome.github.io -->
@@ -8,3 +8,4 @@
 
 <!-- Custom css -->
 <link href="/css/main.css" type="text/css" rel="stylesheet" />
+<link rel="stylesheet" href="/css/solarized-dark.min.css" media="screen" title="solarized" charset="utf-8">
