--- a/_includes/forkme.html
+++ b/_includes/forkme.html
@@ -2,3 +2,6 @@
   class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
   <i class="fa fa-github-square"></i>
 </button>
+<div class="mdl-tooltip" for="fork-me-button">
+  <span>Fork me</span>
+</div>
