--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,15 @@
 <!-- Add this at the end of the page for performance++ -->
 <script defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
+<script  src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 {% include google_analytics.html %}
+
+<script defer type="text/javascript">
+  // Custom code for animation in blog posts
+  $(document).ready(function(){
+    $('.single-post.mdl-card').on('click', function(){
+      console.log("test");
+      $(this).toggleClass('selected');
+      $(this).find('.hide').toggleClass('hidden');
+    });
+  });
+</script>
