--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<!-- <h1>{{ page.title }}</h1> -->
+{% comment %}
+<!-- contains the single post -->
+{% endcomment %}
 
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--12-col">
