--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,43 @@ main {
 /******
   POST
 *******/
-.post-margin {
-  margin-bottom: 20px;
+
+.single-post {
+  transition: .4s;
+  -webkit-transition: .4s;
 }
 
+.hide {
+  transition: .4s;
+	-webkit-transition: .4s;
+  -moz-transition: .4s;
+}
+
+.hidden {
+  transition: .4s;
+	-webkit-transition: .4s;
+  -moz-transition: .4s;
+  height: 0;
+}
+
+.single-post.selected {
+	margin-top: 20px;
+  margin-bottom: 20px;
+	transition: .4s;
+	-webkit-transition: .4s;
+  -moz-transition: .4s;
+}
+
+
+
+/*.post-margin {
+  margin-bottom: 20px;
+}*/
+.post-image {
+  max-width: 20px;
+  max-height: 20px;
+
+}
 .post-date {
   font-size: 0.8em;
 }
