--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,6 +1,6 @@
 <!-- Material design lite by Google. See it here: https://www.getmdl.io -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-<link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.indigo-orange.min.css" />
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.blue_grey-red.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />
 
 <!-- Font Awesome! https://fortawesome.github.io -->
