Fixed mono column layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 {% comment %}
 <!-- contains the single post -->
 {% endcomment %}
-  <div class="mdl-cell mdl-cell--12-col">
+  <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
     <div class="mdl-card max-width mdl-shadow--2dp">
       <div class="mdl-card__supporting-text">
       {{ content }}
