--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,6 @@
 
 
-  <div class="mdl-cell mdl-cell--12-col">
+  <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
     <div id="disqus_thread"></div>
     <script>
     /**
