Disqus only if site is github

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,3 +1,5 @@
+
+{% if site.github %}
   <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
     <div id="disqus_thread"></div>
     <script>
@@ -22,3 +24,4 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
   </div>
+{% endif %}
