added padding in page container

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ Page base layout
 {% endcomment %}
 
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset" style="background-color: white;">
-  <div class="max-width">
+  <div class="max-width" style="padding: 0 20px;">
     {{ content }}
   </div>
 </div>
