--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -20,17 +20,12 @@
         <div class="mdl-card mdl-shadow--2dp centered">
           {{content}}
           <!-- Navigation buttons -->
-          <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--4-col">
-              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/">Home</a>
-            </div>
-            <div class="mdl-cell mdl-cell--4-col">
-              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
-            </div>
-            <div class="mdl-cell mdl-cell--4-col">
-              <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
-            </div>
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/">Home</a>
+            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
+            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
           </div>
+
         </div>
 
       </div>
