--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,11 @@ layout: default
 Page base layout
 {% endcomment %}
 
-<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset" style="background-color: white;">
+<div class="mdl-cell
+  mdl-cell--8-col
+  mdl-cell--2-offset-desktop
+  mdl-cell--4-col-phone
+  mdl-cell--8-col-tablet" style="background-color: white;">
   <div class="max-width" style="padding: 0 20px;">
     {{ content }}
   </div>
