--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 <div class="mdl-layout__drawer" style="overflow: hidden;">
 <nav class="mdl-navigation">
+  <span class="mdl-layout-title">{{page.title}}</span>
   {% include menu.html %}
   <ul class="mdl-list">
     <li class="mdl-list__item">
