--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include styles.html %}
   </head>
   <body class="mdl-color--primary">
-    <div class="header-picture mdl-layout mdl-js-layout">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       {%include header.html %}
       <!-- MAIN CONTENT -->
       <main class="mdl-layout__content">
