--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,10 @@ main {
 
 /* Code syntax personalization */
 pre { border-radius: 4px; }
-.highlight { padding: 20px; }
+.highlight {
+  padding: 20px;
+  overflow-x: auto;
+}
 
 @media (min-width: 480px) {
   /* Negative margin on every page*/
