--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,8 @@
-<div class="mdl-layout__drawer" style="overflow: hidden;">
+<div class="mdl-layout__drawer">
+  <span class="mdl-layout__title">
+    {{site.title}}
+  </span>
 <nav class="mdl-navigation">
-  <span class="mdl-layout-title">{{site.title}}</span>
   {% include menu.html %}
   <ul class="mdl-list">
     <li class="mdl-list__item">
@@ -12,11 +14,9 @@
     {% for post in site.posts limit: 3 %}
     <li class="mdl-list__item mdl-list__item--two-line">
       <span class="mdl-list__item-primary-content">
-        <span class="">
-          <a href="{{ post.url }}">
-            {{ post.title }}
-          </a>
-        </span>
+        <a href="{{ post.url }}">
+          {{ post.title }}
+        </a>
         <span class="mdl-list__item-sub-title">{{ post.date | date_to_string }}</span>
       </span>
     </li>
