--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       {%include header.html %}
       <!-- MAIN CONTENT -->
       <main class="mdl-layout__content">
-        <div class="separator mdl-color--primary"></div>
+        <div class="ribbon mdl-color--primary"></div>
         <div class="mdl-grid negative-top">
           {{ content }}
         </div>
