--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Projects
 ---
 {% comment %}
 Page base layout
@@ -9,7 +10,7 @@ Page base layout
   mdl-cell--8-col
   mdl-cell--2-offset-desktop
   mdl-cell--4-col-phone
-  mdl-cell--8-col-tablet" style="background-color: white;">
+  mdl-cell--8-col-tablet">
   <div class="max-width" style="padding: 0 20px;">
     {{ content }}
   </div>
