Should fix the comments section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,5 +34,8 @@ layout: default
       {% endif %}
     </div>
   </div>
-{% include disqus.html %}
+
+</div>
+<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop mdl-cell--4-col-phone mdl-cell--8-col-tablet">
+  {% include disqus.html %}
 </div>
