--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ Page base layout
   mdl-cell--2-offset-desktop
   mdl-cell--4-col-phone
   mdl-cell--8-col-tablet">
-  <div class="max-width" style="padding: 0 20px;">
+  <div class="max-width">
     {{ content }}
   </div>
 </div>
