Menu with projects

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,7 @@
 <!-- <a class="mdl-navigation__link" href="/cv">Personal CV</a> -->
-<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/"><i class="material-icons">book</i> Blog</a>
-<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/projects">Personal Projects</a>
-<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about"><i class="material-icons">fingerprint</i> About</a>
+<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/">
+  <i class="material-icons">book</i> Blog</a>
+<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/projects">
+  <i class="material-icons">assignment</i> Projects</a>
+<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about">
+  <i class="material-icons">fingerprint</i> About</a>
