--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <!-- <a class="mdl-navigation__link" href="/cv">Personal CV</a> -->
-<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/">
+<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/blog">
   <i class="material-icons">book</i> Blog</a>
 <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/projects">
   <i class="material-icons">assignment</i> Projects</a>
