--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
     <!-- Navigation -->
-    <nav class="mdl-navigation">
+    <nav class="mdl-navigation mdl-layout--large-screen-only">
       {% include menu.html %}
     </nav>
 
