--- a/_includes/past_projects.html
+++ b/_includes/past_projects.html
@@ -4,14 +4,18 @@
     <h2 class="mdl-card__title-text">Past projects</h2>
   </div>
   <div class="mdl-card__supporting-text">
-    <ul class="mdl-list mdl-list__item--two-line">
+    <ul class="mdl-list">
 
       {% for project in site.projects.past %}
-      <li class="mdl-list__item mdl-list__item-primary-content">
-        <span>{{ project.name }}</span>
-        <span class="mdl-list__item-sub-title">
-          {{ project.description }}
+      <li class="mdl-list__item mdl-list__item--three-line">
+        <span class="mdl-list__item-primary-content">
+          <span>{{ project.name }}</span>
+          <span class="mdl-list__item-text-body">
+            {{ project.description }}
+          </span>
         </span>
+
+
       </li>
       {% endfor %}
 
