--- a/_includes/current_projects.html
+++ b/_includes/current_projects.html
@@ -8,7 +8,7 @@
       {% for project in site.projects.current %}
       <li class="mdl-list__item mal mdl-list__item--three-line">
         <span class="mdl-list__item-primary-content">
-          <span>{{ project.name }}</span>
+          <a href="{{project.site}}"><span>{{ project.name }}</span></a>
           <span class="mdl-list__item-text-body">
             {{ project.description }}
           </span>
