--- a/_includes/past_projects.html
+++ b/_includes/past_projects.html
@@ -5,20 +5,16 @@
   </div>
   <div class="mdl-card__supporting-text">
     <ul class="mdl-list">
-
       {% for project in site.projects.past %}
       <li class="mdl-list__item mdl-list__item--three-line">
         <span class="mdl-list__item-primary-content">
-          <span>{{ project.name }}</span>
+          <a href="{{project.site}}"><span>{{ project.name }}</span></a>
           <span class="mdl-list__item-text-body">
             {{ project.description }}
           </span>
         </span>
-
-
       </li>
       {% endfor %}
-
     </ul>
   </div>
 </div>
