Changed fork button tooltip

--- a/_includes/forkme.html
+++ b/_includes/forkme.html
@@ -3,5 +3,5 @@
   <i class="fa fa-github-square"></i>
 </button>
 <div class="mdl-tooltip" for="fork-me-button">
-  <span>Fork me</span>
+  <span>Clone this site</span>
 </div>
