Using twitter pic as personal avatar

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
 }
 
 #card-title {
-  background: url("/images/about/profile-image.jpg") center / cover;
+  /*background: url("/images/about/profile-image.jpg") center / cover;*/
 }
 
 /**********************************************/
